After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700237 - atspi_register_device_event_listener filter param should be annotated with (allow-none)
atspi_register_device_event_listener filter param should be annotated with (a...
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-13 17:10 UTC by Fernando Herrera
Modified: 2013-05-14 18:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Fernando Herrera 2013-05-13 17:10:06 UTC
When using from javascript (gjs) it complains always about filter being null:

Error: Argument 'filter' (type void) may not be null

Adding a (allow-none) annotation for the filter parameter fixes the issue.
Comment 1 Mike Gorse 2013-05-14 18:06:21 UTC
Pushed as commit e2661e. Thanks for the report.