Annotate filter to allow none for device event listeners

Atspi_register_device_event_listener and
atspi_deregister_device_event_listener take a filter (currently unused).
It can be NULL, so it should be annotated as such.

https://bugzilla.gnome.org/show_bug.cgi?id=700237